--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8" />
+	<title>HTML 5 Eksempel Webside</title>
+	<link rel="stylesheet" type="text/css" href="style.css" />
+</head>
 
+	<h1>hei på deg</>
+
+<body>
+	
+</body>
+</html>
